sumo/tests/duarouter/errors/network/edge/root__edge#function__empty1/errors.duarouter
Error: Edge '1' has an unknown type.
Quitting (on error).
